--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -71,3 +71,11 @@ note = "[]"
 	url = {https://es.wikipedia.org/wiki/Firebase},
 	note = "[]"
 }
+
+@misc{ wiki:marketOS,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://gs.statcounter.com/os-market-share/desktop-mobile/worldwide/#monthly-200901-202006},
+	note = "[]"
+}
