--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -1,15 +1,26 @@
 \capitulo{1}{Introducción}
 
-A principios de diciembre de 2019, fue la primera de las reuniones con los tutores, a fin de explicar las ideas propias o de barajar la opción de hacer el trabajo de fin de grado en la empresa, ITCL, donde estaba cursando las prácticas extracurriculares. Entre mis ideas estaba hacer un traductor de jeroglíficos o crear una base de datos de los grafittis de la calle. Al final me decanté por hacerlo en la empresa, ya que vi opciones para ello.
+Comentar brevemente que la idea inicial para el proyecto no era la de crear una aplicación para dispositivos móviles. Si no que se pensó en otros trabajos:
 
-La prmera idea de proyecto era hacer un detector de moscas de la fruta. Este primer enfoque, no se llegó a iniciar, debido a que la empresa no estaba participado de una manera fluida y estaba en una fase muy temprana de desarrillo. El inicio de las conversaciones fue a mediados de enero del 2020, y a finales de febrero al no ver esperanzas, búsque otro trabajo entre los disponibles de la plataforma.
+\begin{itemize}
+	\item A finales de 2019 la idea era hacer el proyecto dentro de la empresa donde me encontraba haciendo las prácticas curriculares (ITCL). El trabajo consistía en una aplicación de reconocimiento de la mosca de la fruta. Pero no prosperó.
+	
+	\item La siguiente propuesta de mis tutores fue la de trabajar con la herramienta \emph{Knime} junto con \emph{Moodle}. Dedique muchas horas a este proyecto, pero era de investigación y no me motivaba, por lo que se acabó descartando esta opción.
+\end{itemize}
 
-La segunda idea del proyecto, si que la comenzé, decicando numerosas horas al desarrollo e investigación, pero acabé dejandola de lado porque no me sentía motivado, ya que se reunierón muchos factores que me bloquearon.
+Finalmente para no perder la convocatoria me decante por hacer una aplicación Android mediante Flutter~\cite{wiki:flutter}. El por qué de esta decisión es que la cuota de mercado para este sistema operativo es enorme~\cite{wiki:marketOS}, con un fuerte crecimiento hasta 2018, estabilizándose y actualmente es el lider del mercado como podemos ver en la siguiente imagen~\ref{fig:cuota}. 
 
-Brevemente, consistia en la implementación de un formulario de login dentro de un nodo de Knime\cite{noauthor_knime_nodate}. , con el fin de poder conectarse a la base de datos de Moodle, recogiendo los datos pertinentes, para hacer mineria de datos, con las herramientas de la aplicación. 
+También debemos de remarcar que la cuota de mercado de los sistemas operativos tradicionales no para de descender, lo que implica que los móviles han venido para quedarse, pero no para sustituir a los ordenadores. Por lo que es una apuesta de futuro aprender el desarrollo de estas aplicaciones móviles, ya que la demanda es muy grande.
 
-Finalmente a un mes de la entrega para la segunda convocatoria, vi la necesidad de hacerlo, decantandome por una aplicación en Android. Una gran carga de trabajo, en caso de hacer algo que tenga entidad suficiente como para aprobar, pero la idea era intentarlo. Uno de los pasos inciales para comenzar a prograr para estos dispositivos, fue buscar cuéles de los lenguajes de programación actuales son más interesantes para el desarrollo. Pensé en varios candidatos pero finalmente me decante por Flutter, ya que está desarrollado y respaldado por Google.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\textwidth]{teoria/cuota.png}
+	\caption{Cuota de mercado}\label{fig:cuota}
+\end{figure}
 
+Básicamente me de decanté por Flutter porque permite la creación de aplicaciones para dos sistemas operativos (Android e iOS) y web. Todo ello programando en un mismo lenguaje, con las ventajas que esto conlleva, además de que es de Google con el respaldo que ofrece. 
+
+El contenido de la aplicación estaría basado en una librería / colección de  videojuegos. De tal manera que sería el hilo conductor con el que poder tocar gran cantidad de tecnologías y aprender en profundidad del funcionamiento de Flutter.
 %% Terminar porque tenemos que explicar más cosas
 
 \section{Estructura de la memoria}\label{estructura-de-la-memoria}
