--- a/docs/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/docs/latex/tex/2_Objetivos_del_proyecto.tex
@@ -8,7 +8,8 @@ A continuación, se detallarán los objetivos que han motivado la realización d
 \section{Objetivos generales}
 \begin{itemize}
 	\item Desarrollar una aplicación para \emph{smartphone}.
-	\item Implemenación y despliegue de la app en la tienda de de Google.
+	\item Implementación y despliegue de la app en la tienda de de Google.
+	\item Obtener el rendimiento económico mediante publicidad.
 	\item Hacer que los usuarios pasen un buen rato.
 	\item Mostrar quien es el creador de la aplicación, con el fin de poder usar esta como herramienta o portfolio.
 	\item Desarrollar juegos.
@@ -30,7 +31,7 @@ A continuación, se detallarán los objetivos que han motivado la realización d
 
 \section{Objetivos personales}
 \begin{itemize}
-	\item Adquirir el conocimiento necesario para desarrollar aplicaciones móviles y multiplataforma. Es decir, para tres entornos, Android, iOS y web.
+	\item Adquirir el conocimiento necesario para desarrollar aplicaciones móviles y multiplataforma. Es decir, para tres entornos: Android, iOS y web.
 	\item Aprobar el trabajo de fin de grado, ya que es un reto.
 	\item Estudiar como generar documentación en \LaTeX.
 	\item Aprender que sin esfuerzo no hay recompensa.
