--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -20,15 +20,15 @@ Estas se denominan así porque se desarrollan en le lenguaje nativo de cada uno 
 	\end{center}
 \end{table}
 
-La ventajas principales son: que están desarrolladas directamente sobre la capa nativa del dispositivo, el rendimiento será óptimo y todas las funcionalidades y características estarán disponibles desde el primer momento.
+Las ventajas principales son: que están desarrolladas directamente sobre la capa nativa del dispositivo, el rendimiento será óptimo y todas las funcionalidades y características estarán disponibles desde el primer momento.
 
 Entre las desventajas: el elevado coste y mantenimiento, ya que requiere personal más especializado, con mayor tiempo destinado al desarrollo. Pero el mayor \emph{gap} lo encontramos en que el codigo nativo de una plataforma no puede ser reutilizado para la otra. Algo que los frameworks actuales están empezando a ofrecer.
 
-\section{Aplicaciones híbreidas mediante Framework}
+\section{Aplicaciones híbridas mediante Framework}
 Un framework (de origen anglosajón, marco de trabajo), según lo que dice la wikipedia~\cite{wiki:framework}, es una estructura conceptual y tecnológica de soporte definido, normalmente por módulos de software concretos, que sirve de base para la organización y el desarrollo de software. Las ventajas que ofrece son varias, entre las que se puede destacar:
 
 \begin{itemize}
-	\item{Único código fuente}: desarrollo de aplicaciones multiplataforma con un único lenguaje, reduciendo los costes de creación / mantenimiento y recursos destinados.
+	\item{Único código fuente}: desarrollo de aplicaciones multiplataforma con un único lenguaje, reduciendo los costes de creación / mantenimiento y recursos destinados. Actualmente no todos los frameworks ofrecen esto, pero si que se está integrando, ya que es una lucha por la competitividad.
 	\item \textbf{Evita repetición de código:} las partes más usadas, pasan a ser algo del \emph{core} del framework.
 	\item \textbf{Uso de buenas prácticas:} muchos de estos están basados en patrones de diseño que nos obligan a usar.
 	\item \textbf{Elementos avanzados integrados:} dispone de librerías nativas que ofrecen \emph{Widgets} o funcionalidades de gran calidad, que llevarían mucho tiempo implementar, o que la creación de los mismo desde cero, no llegaría a obtener una calidad del mismo nivel.
@@ -65,7 +65,7 @@ Algunas de las desventajas:
 
 \subsubsection{React native}
 React native~\cite{wiki:react} fue creado en 2015, de la mano de Facebook. La licencia que tiene es MIT. La diferencia que tiene con React, es que no manipula el DOM, por lo que tampoco usa HTML o CSS. 
-Se programa en javascript. Las aplicaciones más conocidas que usan este framework es instgram o facebook.
+Se programa en javascript. Las aplicaciones más conocidas que usan este framework son Instagram y Facebook.
 
 Ventajas:
 \begin{itemize}
@@ -92,7 +92,7 @@ Ventajas:
 Algunas de las desventajas:
 \begin{itemize}
 	\item Acceso limitado a las bibliotecas.
-	\item Soporte y actualizaciones lento / tarde.
+	\item El soporte es escaso y las actualizaciones son poco frecuentes.
 	\item Comunidad grande pero pequeña comparada con otras.
 	\item Aplicaciones de mayor tamaño.
 	\item Coste.
@@ -107,7 +107,7 @@ Flutter~\cite{wiki:flutter} es un SDK de código abierto creado por Google a fin
 
 Este se encuentra escrito en Dart, que es un lenguaje de programación creado por Google en 2011. Este lo que hace es una mejora del lenguaje javascript, pero sin pretender sustituirlo. Es decir, ofrecer mejores resultados y alternativas para algunos problemas, siendo una herramienta mejor, para proyectos más grandes, como es el caso de flutter.
 
-Por lo tanto Flutter es una herramienta mi nueva, con la que se pueden hacer aplicaciones comerciales para varias plataformas sin tener que programar exclusivamente para cada una de ellas. Ya que nos ofrece la compilación nativa directamente, reduciendo los costes a la hora de tener que llevar proyectos en los que sea necesario estar en los dos mercados.
+Por lo tanto Flutter es una herramienta muy reciente, con la que se pueden hacer aplicaciones comerciales para varias plataformas sin tener que programar exclusivamente para cada una de ellas. Ya que nos ofrece la compilación nativa directamente, reduciendo los costes a la hora de tener que llevar proyectos en los que sea necesario estar en los dos mercados.
 
 Las características más importantes son : 
 
