--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -114,7 +114,7 @@ Las características más importantes son :
 \begin{itemize}
 	\item Desarrollo rápido de las aplicaciones. Cuando se dice rápido es porque permite \emph{hot reload}, esta es la carga en caliente durante la fase de desarrollo. Implica que nos es necesario tener que compilar todo el código, si no aquellas partes que fueron modificadas. Lo que permite en tiempo de ejecución ver los cambios.
 	\item Está muy optimizado, con una evolución y soporte constante.
-	\item Es un lenguaje de programación respaldado por Google, con lo que esto conlleva. Seguridad, confianza, fiabilidad, soporte, cursos y un montón de herramientas(más de 300 apis distintas: mapas, reconocimiento facial, traductor ... ).
+	\item Es un lenguaje de programación respaldado por Google, con lo que esto conlleva. Seguridad, confianza, fiabilidad, soporte, cursos y un montón de herramientas (más de 300 apis distintas: mapas, reconocimiento facial, traductor ... ).
 	\item La integración con el sistema operativo Android es mucho más eficaz, ya que este también pertenece a Google.
 	\item Cuando se compila, lo hace a nativo, siendo una ganancia de rendimiento.
 	\item La curva de aprendizaje es baja, en el caso de que sepamos javascript, typescript o ecmascript.
@@ -126,18 +126,18 @@ Las desventajas que tiene son:
 	\item La mayor parte de la documentación se encuentra en inglés, pero es más problema de desarrollador, que de la propia documentación del framework.
 	\item Las aplicaciones ocupan más espacio que las nativas, ya que suelen incluir el SDK al completo.
 	\item Al ser tan nuevo, tiene algunos problemas, no ofrece todas las funcionalidades, como las que ofrecen otras plataformas. Google lo sabe y está apostando mucho por ello.
-	\item Es una comunidad pequeña, pero a crecido en dos años más que otras, en tiempos similares.
+	\item Es una comunidad pequeña, pero ha crecido en dos años más que otras, en tiempos similares.
 \end{itemize}
 
 Al final me decanto por este Framework básicamente porque es algo nuevo y disruptivo. El respaldo de Google se me presentaba como garantía, con la tranquilidad que eso conlleva. Es decir, todo el \emph{cloud services de Google} se puede integrar con gran facilidad.
 Otra de las cosas que fueron de agrado es que la comunidad lo a recibido con los brazos abiertos, como se puede ver en la encuesta~\ref{fig:encuesta}, se encuentra entre los favoritos de los desarolladores, por algo será.
 
 \subsection{Firebase}
-Firebase~\cite{wiki:firebase} es una plataforma para el desarollo de apliaciones web, Android e iOS, creada por Google en el 2014. Esta en la nube, formando el \emph{Google Cloud Plataform}, que consta de un conjunto de herramientas para dotar de una calidad enorme a los proyectos. Ya que permite la integración del ecosistema de Google como un todo.
+Firebase~\cite{wiki:firebase} es una plataforma para el desarollo de aplicaciones web, Android e iOS, creada por Google en el 2014. Esta en la nube, formando el \emph{Google Cloud Plataform}, que consta de un conjunto de herramientas para dotar de una calidad enorme a los proyectos. Ya que permite la integración del ecosistema de Google como un todo.
 
 Fue integrada en el proyecto por el hecho de ser un servicio gratuito y que aportaba gran valor a la aplicación. Este pasa a ser de pago cuando la app tiene que escalarse a un nivel más grande, por el tema de usuarios o el número de peticiones que se realicen a la misma. Algunas de las herramientas que integra son de pago, otras no.
 
-Por lo tanto al ser multiplatafomra es un backend con el que poder controlar todo, ganancias, gastos, escalabilidad, nuevos productos, herramientas ... 
+Por lo tanto al ser multiplataforma es un backend con el que poder controlar todo, ganancias, gastos, escalabilidad, nuevos productos, herramientas ... 
 
 Entre los servicios que ofrece tenemos:
 
