--- a/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -3,19 +3,19 @@
 En este apartado se recogen los aspectos más importantes o relevantes del desarrollo del proyecto. Desde las decisiones tomadas y las implicaciones que conlleva. Además de los problemas que fueron surgiendo.
 
 \section{Comienzo del trabajo final de grado}
-La idea de mi proyecto, surge de la noche a al mañana, porque el problema es que era 20 de Julio y no tenía nada que entregar, ya que iba a hacer otro proyecto en Knime, dejándolo para otro curso. 
+La idea de mi proyecto, surge de la noche a al mañana, porque el problema fue que era el día 20  de junio y no tenía nada para entregar. Esto se debía a que inicialmente iba a hacer otro proyecto basado en \emph{Knime}.
 
-Pero no podía dejar pasar una oportunidad. Fue más una falta de motivación y de malas sensaciones que otra cosa.
+No podía dejar pasar una convocatoria más, debido a que el otro proyecto no me motivaba lo suficiente y con poca documentación al respecto. Aparte no me sentía cómodo con el tema.
 
 Por lo que me decidí estudiar como estaba el mercado de la programación móvil, descubriendo Flutter. Me gustó mucho, todo lo que se comentaba sobre este \emph{Framework}, eran cosas buenas, que era algo nuevo y sobretodo lo que más me decidió a cogerlo, es el respaldo que le daba Google.
 
 Esto se lo comenté a mis tutores de trabajo final de grado, dándome el visto bueno, pero que tenía que trabajar mucho, para llegar a la calidad esperada. Por lo que era un reto enorme al que me enfrentaba, pero como digo, no se pueden dejar pasar las oportunidades, además que por otra parte lo que más me incentivaba, es a la hora de buscar trabajo, no decir que solo me quedaba el TFG. 
 
-Ya que muchas de las empresas me decían que me esperaban a que terminase, para luego cogerme. Y yo no podía esperar, porque si no hacía el TFG, debía de trabajar para no tener que pensar en esto. Por lo que me encontraba entre la 'espada y la pared'.
+Ya que muchas de las empresas me decían que me esperaban a que terminase, para luego cogerme. Y yo no podía esperar, porque si no hacía el TFG, debía de trabajar para no tener que pensar en esto. Por lo que me encontraba entre la ``espada y la pared''.
 
-Por lo que muchas gracias a mis tutores, por haberme dejado cambiar de proyecto, por animarme a conseguirlo, por el feedback constante y darme el soporte necesario.
+Por lo que me siento muy agradecido con mis tutores, por haberme dejado cambiar de proyecto, por animarme a conseguirlo, por el feedback constante y darme el soporte necesario.
 
-Finalmente hice un curso en Udemy, de unas 40 horas en dos días y medio, para conocer los elementos más básicos, ya que empezaba con los conocimientos que aporta la carrera nada más.
+Finalmente hice un curso en ~\href{https://www.udemy.com/course/flutter-primeros-pasos/}{Udemy}, de unas 40 horas en dos días y medio, para conocer los elementos más básicos, ya que empezaba con los conocimientos que aporta la carrera nada más.
 
 \section{Flutter es asíncrono}
 Uno de los mayores retos cuando empiezas a trabajar con este \emph{framework} (ya que en el curso que hice ni se tocan prácticamente), es que se trabaja de manera asíncrona.
@@ -38,14 +38,14 @@ Pero podemos encontrarnos con otros objetos que también manejan tareas futuras 
 
 Estos se definen en un lugar, cogen datos de otro lugar y se queda a la escucha de que se produzcan cambios. En el caso de disparen esos cambios, el Stream se encargará de rediseñar la interfaz del usuario o de actualizar la variables, según el caso.
 
-\section{Nuevas formas de hacer if}
-Desconocía totalmente esta nueva forma de hacer los condicionales, ya que deja un código más limpio, que ocupa menos líneas e intuitivo. Un ejemplo de esto se puede ver en la imagen siguiente~\ref{fig:nuevoif}:
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=1\textwidth]{teoria/nuevoif.png}
-	\caption{Nuevas formas if}\label{fig:nuevoif}
-\end{figure}
+%\section{Nuevas formas de hacer if}
+%Desconocía totalmente esta nueva forma de hacer los condicionales, ya que deja un código más limpio, que ocupa menos líneas e intuitivo. Un ejemplo de esto se puede ver en la imagen siguiente~\ref{fig:nuevoif}:
+%
+%\begin{figure}[H]
+%	\centering
+%	\includegraphics[width=1\textwidth]{teoria/nuevoif.png}
+%	\caption{Nuevas formas if}\label{fig:nuevoif}
+%\end{figure}
 
 \section{Play Store}
 Uno de los problemas encontrados fue a la hora de tener que generar las claves de seguridad, para que la aplicación se pueda subir a la tienda y que ciertos de los servicios estén operativos.
