--- a/docs/latex/tex/6_Trabajos_relacionados.tex
+++ b/docs/latex/tex/6_Trabajos_relacionados.tex
@@ -6,8 +6,8 @@ No me he basado en trabajo anteriores, pero si que he buscado mucha información
 
 
 \begin{itemize}
-	\item Flutter sdk , donde está toda la documentación oficial~\href{https://flutter.dev/}{web}.
-	\item Canal oficial de  ~\href{https://www.youtube.com/watch?v=ukLBCRBlIkk&list=PLjxrf2q8roU1kMpfyJ4EY0pID2oRHtvGm}{flutter} en youtube, donde se comenta el Widget de la semana.
-	\item Todo lo referente a~\href{https://api.dart.dev/stable/2.8.4/index.html}{dart}.
-	\item Canal de youtube sobre ~\href{https://www.youtube.com/channel/UCP4bf6IHJJQehibu6ai__cg}{firebase}.
+	\item Flutter sdk , donde está toda la documentación oficial~\href{https://flutter.dev/}{web}~\footnote{https://flutter.dev/}.
+	\item Canal oficial de  ~\href{https://www.youtube.com/watch?v=ukLBCRBlIkk&list=PLjxrf2q8roU1kMpfyJ4EY0pID2oRHtvGm}{flutter}~\footnote{https://www.youtube.com/watch?v=ukLBCRBlIkk} en youtube, donde se comenta el Widget de la semana.
+	\item Todo lo referente a~\href{https://api.dart.dev/stable/2.8.4/index.html}{dart}~\footnote{https://api.dart.dev/stable/2.8.4/index.html}.
+	\item Canal de youtube sobre ~\href{https://www.youtube.com/channel/UCP4bf6IHJJQehibu6ai__cg}{firebase}~\footnote{https://www.youtube.com/channel/UCP4bf6IHJJQehibu6aicg}.
 \end{itemize}
