--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -8,10 +8,10 @@ Esta parte de la memoria tiene como objetivo presentar las técnicas metodológi
 \subsection{Opciones elegidas}
 
 \subsubsection{Microsoft}
-~\href{https://www.microsoft.com/es-es}{Microsoft} es el sistema operativo generalista por excelencia. Es de sobra conocido, con sus pros y contras. Fue elegido por comodidad, ya que es el que tengo instalado en mis ordenadores. Además el IDE usado~\pageref{visual} para el desarrollo, será de la misma compañía, por lo que hay mayor optimización para este sistema.
+~\href{https://www.microsoft.com/es-es}{Microsoft} es el sistema operativo generalista por excelencia. Es de sobra conocido, con sus pros y contras. Fue elegido por comodidad, ya que es el que tengo instalado en mis ordenadores. Además el IDE usado (Visual Studio Code, pág.~\pageref{visual}) para el desarrollo, será de la misma compañía, por lo que hay mayor optimización para este sistema.
 
 \subsubsection{Android}
-~\href{https://www.android.com/intl/es_es/}{Andorid} es un sistema operativo móvil desarrollado por Google. Está basado en el kernel de Linux. Tiene casi toda la cuota de mercado de telefonía. Este se ha usado en mi \emph{smartphone} personal y en las máquinas virtuales, con el fin de probar las aplicaciones en dispositivo físicos y virtualiazdos respectivamente.
+~\href{https://www.android.com/intl/es_es/}{Android} es un sistema operativo móvil desarrollado por Google. Está basado en el kernel de Linux. Tiene casi toda la cuota de mercado de telefonía. Este se ha usado en mi \emph{smartphone} personal y en las máquinas virtuales, con el fin de probar las aplicaciones en dispositivo físicos y virtualiazdos respectivamente.
 
 \subsection{Alternativas descartadas}
 
@@ -20,7 +20,7 @@ Esta parte de la memoria tiene como objetivo presentar las técnicas metodológi
 
 
 \subsubsection{macOS X}
-~\href{https://www.apple.com/es/macos}{macOs} sistema operativo creado por Apple, basado en Unix. Se descarta por que se quiere trabajar con dispositivos Android. Pero en el caso de que se quiera desarrollar para iOS~\pageref{ios}, es indispensable usarlo aquí, porque a la hora de compilar, tira de las librerías internas de este sistema operativo.
+~\href{https://www.apple.com/es/macos}{macOs} sistema operativo creado por Apple, basado en Unix. Se descarta por que se quiere trabajar con dispositivos Android. Pero en el caso de que se quiera desarrollar para iOS pág.~\pageref{ios}, es indispensable usarlo aquí, porque a la hora de compilar, tira de las librerías internas de este sistema operativo.
 
 \subsubsection{iOS}~\label{ios}
 ~\href{https://www.apple.com/es/ios}{iOS} sistema operativo para \emph{smartphones} creado por Apple, basado en Unix. Se descarta por que se quiere trabajar con dispositivos Android. Pero en el caso de que se quiera desarrollar para iOS~\pageref{ios}, es indispensable usarlo aquí, porque a la hora de compilar tira de las librerías internas del sistema operativo.
@@ -43,7 +43,7 @@ Se escogió esta porque la hemos usado durante el grado y es de sobra conocida. 
 \subsection{Alternativas descartadas}
 
 \subsubsection{Gitlab}
-~\href{https://gitlab.com/}{Gitlab}es igual que Github pero de código abierto ya que tiene licencia MIT. También lo usé en la empresa durante las prácticas pero fue descartado porque me parece de menor calidad. En cuanto a espacio este tiene 10 GB a favor, en contra del 1 GB de Github.
+~\href{https://gitlab.com/}{Gitlab} es igual que Github pero de código abierto ya que tiene licencia MIT. También lo usé en la empresa durante las prácticas pero fue descartado porque me parece de menor calidad. En cuanto a espacio este tiene 10 GB a favor, en contra del 1 GB de Github.
 
 \subsubsection{Bitbucket}
 ~\href{https://bitbucket.org/product//}{Bitbucket} es otra web más para el control de versiones. Esta enfocado más a la empresa privada, ya que se suele integrar muy bien con otras herramientas de gestión de proyectos. Se descarto por el poco uso que he tenido con este.
@@ -57,7 +57,7 @@ Hay una gran cantidad de herramientas para el control de versiones en la tienda 
 \subsection{Opción elegida}
 
 \subsubsection{Zenhub}\label{zenhub}
-~\href{https://bitbucket.org/product//}{Zenhub} es una herramienta de gestión de proyectos, que viene por defecto integrada en Github~\pageref{github}, lo que implica a usarla sin pensarlo mucho. En mi caso lo que más usé fue el tablero de \emph{kanban} donde poder ver las \emph{issues} que me planificaba para cada \emph{sprint}. Ofrece diferentes tipos de gráficos, el que mejor se encajaba a la planificación fue de \emph{burndown}, ya que me permite ver lo ideal del proyecto y la progresión que llevo. No me gustó que las tareas las cierra por días en vez de por horas.
+~\href{https://bitbucket.org/product//}{Zenhub} es una herramienta de gestión de proyectos, que viene por defecto integrada en Github, pág.~\pageref{github}, lo que implica a usarla sin pensarlo mucho. En mi caso lo que más usé fue el tablero de \emph{kanban} donde poder ver las \emph{issues} que me planificaba para cada \emph{sprint}. Ofrece diferentes tipos de gráficos, el que mejor se encajaba a la planificación fue de \emph{burndown}, ya que me permite ver lo ideal del proyecto y la progresión que llevo. No me gustó que las tareas las cierra por días en vez de por horas.
 
 \begin{figure}[h]
 	\centering
@@ -86,7 +86,7 @@ Esta facilidad de uso hicieron que me decantase por él.
 \subsection{Alternativas descartadas}
 
 \subsubsection{Android Studio}\label{androidstudio}
-~\href{https://developer.android.com/studio}{Android Studio} es la herramienta oficial de desarrollo de aplicaciones móviles para el sistema operativo Android. La licencia es Apache 2.0. y sustituye a Eclipse~\pageref{eclipse} como el entorno de desarrollo preferido por Google.
+~\href{https://developer.android.com/studio}{Android Studio} es la herramienta oficial de desarrollo de aplicaciones móviles para el sistema operativo Android. La licencia es Apache 2.0. y sustituye a Eclipse pág.~\pageref{eclipse} como el entorno de desarrollo preferido por Google.
 
 Este IDE se descarta para la creación de código, pero no para las máquinas virtuales.
 
@@ -99,7 +99,7 @@ Este IDE se descarta para la creación de código, pero no para las máquinas vi
 \subsection{Opción elegida}
 
 \subsubsection{Android Studio}
-~\href{https://developer.android.com/studio}{Android Studio}~\pageref{androidstudio} fue elegido para el despliegue de la aplicación en las máquinas virtuales que ofrece este IDE. Es eficiente y simple, centrado en Android. La creación de las VM es muy cómoda, ya que tiene todo integrado, (con cuatro clicks de ratón se puede lanzar una).
+~\href{https://developer.android.com/studio}{Android Studio} pág.~\pageref{androidstudio} fue elegido para el despliegue de la aplicación en las máquinas virtuales que ofrece este IDE. Es eficiente y simple, centrado en Android. La creación de las VM es muy cómoda, ya que tiene todo integrado, (con cuatro clicks de ratón se puede lanzar una).
 
 Sumado a que algunas herramientas de Visual Studio Code tiran de estas máquinas, hace que sea la opción más recomendable.
 
@@ -131,7 +131,7 @@ Es un servicio de correo electrónico proporcionado pro Google. Se descarta porq
 \subsection{Opciones elegidas}
 
 \subsubsection{TexStudio}
-~\href{https://www.texstudio.org/}{TexStudio} es un editor de Latex de código abierto, licencia GNU, muy similar a texmaker~\pageref{textmaker}, ya que es un \emph{fork} de este. Lo que hizo decantarme por el fue la corrección ortográfica interactiva y resaltado de la sintaxis.
+~\href{https://www.texstudio.org/}{TexStudio} es un editor de Latex de código abierto, licencia GNU, muy similar a texmaker, pág.~\pageref{textmaker}, ya que es un \emph{fork} de este. Lo que hizo decantarme por el fue la corrección ortográfica interactiva y resaltado de la sintaxis.
 
 \subsubsection{Zotero}
 ~\href{https://www.zotero.org/}{Zotero} es un gestor de referencias bibliográficas, cuya licencia es AGPL, siendo gratuito. Tiene una extensión para el navegador que ayuda mucho.
@@ -153,16 +153,21 @@ Editor de documentos de Microsoft, muy conocido, dentro del paquete de ofimátic
 \subsection{Opción elegida}
 
 \subsubsection{Google Chrome}
-Es un navegador web de código cerrado desarrollado por Google, siendo gratuito. Se ha usado este sin plantear alternativas, porque lo llevo usando desde hace muchos años. Fue usado como 'navaja suiza', ya que es una herramienta de herramientas, que ha sido usado para multitud de cosas, como:
+Es un navegador web de código cerrado desarrollado por Google, siendo gratuito. Se ha elegido este pro simpleza porque lo llevo usando desde hace muchos años. Fue usado como ``navaja suiza'', ya que es una herramienta de herramientas, que ha sido usado para multitud de cosas, como:
 
 \begin{itemize}
 	\item Para descargar programas, paquetes, librerías...
 	\item Para la búsqueda de información.
 	\item Edición de imágenes.
-	\item Generador de iconos \href{https://romannurik.github.io/AndroidAssetStudio}{romannurik}
-	\item Creación de diagramas \href{https://app.creately.com}{creately}
-	\item Armonía de color \href{https://color.adobe.com/es/create/color-wheel}{Adobe color}
+	\item Generador de iconos usando el servio web ofrecido por: \href{https://romannurik.github.io/AndroidAssetStudio}{romannurik}
+	\item Creación de diagramas ofrecido por la web: \href{https://app.creately.com}{creately}
+	\item Armonía de color aportado por la web \href{https://color.adobe.com/es/create/color-wheel}{Adobe color}
 \end{itemize}
+
+\subsection{Alternativas descartadas}
+
+\subsubsection{Mozilla Firefox}\label{mozilla}
+~\href{https://www.mozilla.org/es-ES/firefox/new/}{Mozilla Firefox} es un navegador de código abierto desarrollado para los principales sistemas operativos. No usado.
 
 %%%METODOLOGIAS
 \section{Metodologías}
@@ -182,7 +187,7 @@ Es un desarrollo en secuencia, es decir, una vez se pasa de etapa, no se puede v
 \subsection{Bolígrafo y cuaderno}
 Para mi la parte más importante de toda la gestión del proyecto, reuniones, diseño de las interfaces, control de las horas, planificación, caja negra ... 
 
-Siempre lo he tenido a mi lado como soporte, como se puede ver ~\ref{fig:soporte}:
+Siempre lo he tenido a mi lado como soporte, como se puede ver en la figura~\ref{fig:soporte}:
 
 \begin{figure}[h]
 	\centering
