--- a/docs/latex/anexos.tex
+++ b/docs/latex/anexos.tex
@@ -351,7 +351,7 @@
 
 
 % Datos de portada
-\title{Flutter \\Documentación Técnica}
+\title{Flutter Games\\Documentación Técnica}
 \author{Samuel Casal Cantero}
 \tutor{José Francisco Diez Pastor y Cesár García Osorio}
 \date{\today}
