--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -360,12 +360,12 @@
 \newcommand{\nombre}{Samuel Casal Cantero} %%% cambio de comando
 
 %% Comando para el nombre del proyecto
-\newcommand{\tfg}{Flutter} 
+\newcommand{\tfg}{Flutter Games} 
 
 % Datos de portada
-\title{Flutter}
+\title{Flutter Games}
 \author{Samuel Casal Cantero}
-\tutor{César García Osorio y  Francisco Javier Diez Pastor}
+\tutor{César García Osorio y  José Francisco Diez Pastor}
 \date{\today}
 
 \begin{document}
