--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -137,7 +137,7 @@ Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/f
 
 Para el cierre, todas las tareas presupuestadas fueron realizadas. Se planificaron 41 horas, destinando 33 horas para el desarrollo esperado.
 
-\subsection{Sprint 5 (11/07/20 - 115/07/20)}\label{sprint-5-11072020---15072020}
+\subsection{Sprint 5 (11/07/20 - 15/07/20)}\label{sprint-5-11072020---15072020}
 Para este \emph{Sprint} la idea es terminar los anexos, pulir el despliegue de la aplicación en la \emph{Play Store} y resolver los problemas finales.
 
 Los objetivos para este \emph{sprint} son:
@@ -158,7 +158,14 @@ Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/f
 
 \imagen{burndowns/sp5.png}{Sprint 5.}
 
-Para el cierre el total de las tareas fueron completadas, se planificaron 41 horas, destinando 33 horas para el desarrollo esperado.
+Para el cierre del sprint 5 no todas las tareas se terminaron, debido a que la planificación fue optimista y que las horas empleadas para algunas tareas fue mayor a la estimación.
+
+De las 60 horas planificadas para la semana, 41 horas se emplearon para cerra el 66\% de las tareas, quedando 19 hora de tareas, que se mueven al siguiente sprint.
+
+\subsection{Sprint 6 (16/07/20 - 20/07/20)}\label{sprint-6-16072020---20072020}
+Tras el cierre del \emph{sprint} anterior quedó claro que no se pudieron completar todas las tareas, ya que la memoria y anexos llevan mucho tiempo, si se quiere hacer contenido de calidad. Por lo que para este último sprint del proyecto, se pretende terminar toda la documentación, revisar todos los elementos a entregar y la creación de los videos.
+
+El día 20 de Julio, día de la entrega se tiene que hacer la reunión final de cierre, donde se firmarán las dos documentos y se procederá al cierre del proyecto en Github.
 
 \section{Estudio de viabilidad}
 
@@ -238,8 +245,10 @@ Son otro tipo de gastos que también se deben tener en cuenta.
 			\hline
 			Concepto                        & Coste (€)  	\\ \hline
 			Internet					    & 50     		\\
-			Cuenta Google Play				& 25			\\ \hline
-			Coste total            	 		&75			\\ \hline
+			Cuenta Google Play				& 25			\\ 
+			Maquetador póster					    & 50     		\\
+			8 horas asesoramiento tutores &	600		\\ \hline
+			Coste total            	 		&725			\\ \hline
 		\end{tabular}
 		\caption{Coste vario}
 		\label{table:costevario}
