--- a/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -25,6 +25,8 @@ En este apéndice se expone las conclusiones tras la finalización del proyecto 
 	
 	\item La investigación como parte fundamental a la hora de añadir nuevas funcionalidades al producto como el \emph{sign in} de la aplicación o la publicidad, entre otras.
 	
+	\item Los costes del proyecto tuvieron superávit, es decir los el coste total del proyecto fue menor que los costes estimados. Además a futuro es probable que tengamos entrada de ingresos por parte de la publicidad o por nuevas vías.
+	
 \end{itemize}
 
 En definitiva, personalmente estoy muy contento de haber trabajado duro y haber conseguido una aplicación, ya que desconocía la programación en Android, lo que me ha hecho crecer como persona, pero sobretodo en el ámbito profesional.
