--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -38,7 +38,7 @@ Aclarar que la estimación del tiempo se realiza mediante los \emph{story points
 
 A continuación se detallan cada uno de los \emph{sprints} realizados durante el proyecto:
 
-\subsection{Sprint 1 (22/06/20 - 26/06/20)}\label{sprint-2-220620---260620}
+\subsection{Sprint 1 (22/06/20 - 26/06/20)}\label{sprint-1-220620---260620}
 
 El inicio del proyecto fue a través de correo, explicando la situación a mis tutores. Para comenzar, les sugerí cambiar el tema, ya que había elegido algo de investigación con poca documentación. Me dieron el visto bueno, pero me propusieron hacer algo diferenciador. Por lo que en la reunión de cierre de \emph{sprint} se comentaría como centrar la aplicación. 
 
@@ -167,13 +167,20 @@ Tras el cierre del \emph{sprint} anterior quedó claro que no se pudieron comple
 
 El día 20 de Julio, día de la entrega se tiene que hacer la reunión final de cierre, donde se firmarán las dos documentos y se procederá al cierre del proyecto en Github.
 
+Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/flutter_serpiente/milestone/6?closed=1}{Sprint 6}
+
+\imagen{burndowns/sp5.png}{Sprint 6. FALTA FALTA FALTA FALTA FALTA FALTA FALTA FATAL}
+
+Para el cierre de este \emph{sprint} todas las tareas fueron completadas, ya que también era el cierre del proyecto. El número de horas que se destinaron para este fueron de 38.
+
+
 \section{Estudio de viabilidad}
 
 En esta parte se pretende analizar el coste / beneficio de todo el proyecto, como el apartado legal en todo el proceso de desarrollo, en el caso de que se hubiera tenido que realizar en un entorno real. 
 
 
 \subsection{Viabilidad económica}
-La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer},~\cite{noauthor_freelancercom_2020}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, incluyendo un porcentaje de beneficios. En mi caso la estimación inicial de las horas fue de 250 horas.
+La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer},~\cite{noauthor_freelancercom_2020}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, así como de otros costes que conozcamos de ante mano, finalmente se incluye un porcentaje de beneficios. En mi caso la estimación inicial de las horas fue de 250 horas.
 
 Otra de las vías para obtener ingresos es mediante los anuncios ofrecidos por \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y vídeos con los que tener un retorno de dinero. La idea es que la aplicación este disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. 
 
@@ -200,7 +207,7 @@ Se desglosa el coste de los dispositivos usados para la implementación, suponie
 El coste de las librerías, \emph{cloud services}, entornos de desarrollo, licencias, cursos, máquinas virtuales, entre otros, han sido de uso gratuito, dando lugar a un coste software de 0 euros.
 
 \subsubsection{Coste personal}
-El proyecto fue llevado por un solo trabajador, que se encargaba del desarrollo de software y la planificación. El tiempo inicialmente estimado fue de 250 horas. Siendo el trabajador autónomo se considera el siguiente salario:
+El proyecto fue llevado por un solo trabajador (Samuel Casal Cantero), ya que es un proyecto unipersonal, que se encargaba del desarrollo de software y la planificación. El tiempo inicialmente estimado fue de 250 horas. Siendo el trabajador autónomo se considera el siguiente salario:
 
 \begin{table}[H]
 	\begin{center}
@@ -246,24 +253,63 @@ Son otro tipo de gastos que también se deben tener en cuenta.
 			Concepto                        & Coste (€)  	\\ \hline
 			Internet					    & 50     		\\
 			Cuenta Google Play				& 25			\\ 
-			Maquetador póster					    & 50     		\\
-			8 horas asesoramiento tutores &	600		\\ \hline
-			Coste total            	 		&725			\\ \hline
+			Maquetador póster				& 50     		\\
+			8 horas asesoramiento tutores   & 600		\\ \hline
+			Coste total            	 		& 725			\\ \hline
 		\end{tabular}
 		\caption{Coste vario}
 		\label{table:costevario}
 	\end{center}
 \end{table}
 
-\subsubsection{Coste total proyecto}
-El coste total del proyecto es la suma de los costes anteriores, el cual da un importe de 5399,9 €, a esto le tenemos que aplicar el correspondiente incremento del impuesto de valor añadido, que es~\cite{noauthor_freelancercom_2020} del 21\%, por lo que el coste total del proyecto es de 6533,9 €.
+\subsubsection{Coste total estimado del proyecto}
+El coste total estima del proyecto es la suma de los costes anteriores, el cual da un importe de 6011,15 €, a esto le tenemos que aplicar el correspondiente incremento del impuesto de valor añadido, que es~\cite{noauthor_freelancercom_2020} del 21\%, ya que se debe realizar una factura, por lo que el coste total estimado del proyecto es de \textbf{7273,5 €}.
 
-\subsubsection{Beneficios}
+\subsubsection{Margen de beneficios}
 La idea es que la aplicación se distribuya de manera gratuita a través de la cuenta de \emph{Google Play}, pero a pesar de tener publicidad los beneficios que retornará serán prácticamente nulos.
 
-Por lo que la vía de obtener ingresos como freelance, puede ser incrementar el coste del proyecto un 15\%, con el fin de asegurar ese beneficio. Esto garantiza que ante un incremento de las horas planificadas, siga existiendo margen de beneficio.
+Por lo que la vía de obtener ingresos como freelance, puede ser incrementar el coste del proyecto un 15\%, con el fin de asegurar ese beneficio. Esto garantiza que ante un incremento de las horas planificadas, siga existiendo margen de beneficio. En el caso de que no lleguemos a gastar todas las horas planificadas, también supondrá un aumento de las ganancias.
 
-El nuevo coste total del proyecto sería entonces de 6209,89 €, que añadiendo el impuesto de valor añadido, se queda en 7513,96 €.
+El nuevo coste total del proyecto sería: 6011,15 * 0,15\% = 6912,82  €, que añadiendo el I.V.A. del 0,21\%, se queda en \textbf{8364,5 €} que debería de pagar la Universidad como cliente que realiza el encargo. Esta sería la factura final.
+
+\subsubsection{Coste real del proyecto}
+Haciendo la suma de las horas destinadas en cada uno de los \emph{sprints}, vemos en la tabla\ref{table:horas}:
+
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{cc}
+			\hline
+			Sprint                        & Horas   	\\ \hline
+			Sprint 1, ver pág.~\pageref{sprint-1-220620---260620}					    & 45,5     		\\
+			Sprint 2, ver pág.~\pageref{sprint-1-270620---010720}					    & 45    		\\
+			Sprint 3, ver pág.~\pageref{sprint-3-020720---070720}					    & 44,5  		\\
+			Sprint 4, ver pág.~\pageref{sprint-4-070720---100720}					    & 33     		\\
+			Sprint 5,ver pág.~\pageref{sprint-5-11072020---15072020}	& 41     			    		\\
+			Sprint 6,ver pág.~\pageref{sprint-6-16072020---20072020}					    & 38    		\\  \hline
+			Horas totales            	 		& 247			\\ \hline
+		\end{tabular}
+		\caption{Horas del proyecto}
+		\label{table:horas}
+	\end{center}
+\end{table}
+
+
+El coste real del proyecto sería el mismo que el coste estimado pero con 3 horas de diferencia, ya que se estimaron 250 horas de las que han sido necesarias emplear 247 horas.
+
+Este número de horas hace un coste de : \textbf{5951,15 €} 60 euros menos que la estimación inicial.
+
+\subsection{Beneficios}
+Para calcular todos los beneficios debemos de ver la diferencia entre el coste total estimado, menos el coste real del proyecto. 
+
+\begin{itemize}
+	\item El coste estimado con 250 horas y horquilla de 0.15\% era: 6912,82  €.
+	\item El coste real del proyecto: 5951,15 €.
+	\item Diferencia = 6912,82  € - 5951,15 € = 961.67 €.
+\end{itemize}
+
+Recalcar que las horas como freelance también son beneficios, pero personales, ya que soy el encargado de ejecutar el trabajo final de grado. Pero que para el proyecto imputan como costes.
+
+\textbf{Los beneficios a fecha 20/07/2020: +961.67 €}
 
 \subsection{Viabilidad legal}
 
